--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -8,8 +8,10 @@ html(lang="ko")
             h1=pageTitle
             nav 
                 ul 
-                   li  
+                    li  
                       a(href="/videos/upload") Upload Video
+                    li  
+                      a(href="/") Home
         main 
             block content
     include partials/footer
