{Wetube} USER AUTHENTICATIONS

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,9 +12,9 @@ html(lang="ko")
                       a(href="/") Home
                     if loggedIn
                         li 
-                          a(href="/logout") Log out 
-                        li  
-                          a(href="/my-profile") #{loggedInUser.name} 의 profile
+                          a(href="/users/edit") Edit Profile
+                        li 
+                          a(href="/users/logout") Log out 
                     else 
                         li  
                           a(href="/login") Login
@@ -22,7 +22,7 @@ html(lang="ko")
                           a(href="/join") Join
                     li  
                       a(href="/search") Search 
-                    li  
+                    li   
                       a(href="/videos/upload") Upload Video
         main 
             block content
