[wetube] User Profile

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -11,10 +11,15 @@ html(lang="ko")
                     li  
                       a(href="/") Home
                     if loggedIn
+                        li   
+                          a(href="/videos/upload") Upload Video
+                        li 
+                          a(href=`/users/${loggedInUser._id}`) My profile
                         li 
                           a(href="/users/edit") Edit Profile
                         li 
                           a(href="/users/logout") Log out 
+                        
                     else 
                         li  
                           a(href="/login") Login
@@ -22,8 +27,7 @@ html(lang="ko")
                           a(href="/join") Join
                     li  
                       a(href="/search") Search 
-                    li   
-                      a(href="/videos/upload") Upload Video
+                   
         main 
             block content
     include partials/footer
