--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -1,8 +1,15 @@
 extends base
 
 block content 
-   form(method="POST") 
-       input(placeholder="Email", type="email", name="email", required)
-       input(placeholder="Name" name="name" type="text", required)
-       input(placeholder="Username", name="username", type="text", required)
-       input(placeholder="Location", name="location", type="text", required)
+    img(src="/" + loggedInUser.avatarUrl, width="100", height="100")
+    form(method="POST", enctype="multipart/form-data") 
+        label(for="avatar") Avatar 
+        input(type="file", id="avatar", name="avatar", accept="image/*")
+        input(placeholder="Name" name="name" type="text", required, value=loggedInUser.name)
+        input(placeholder="Email", name="email", type="email",  required, value=loggedInUser.email)
+        input(placeholder="Username", name="username", type="text", required, value=loggedInUser.username)
+        input(placeholder="location", name="location", type="text", required, value=loggedInUser.location)
+        input(type="submit", value="Update Profile")
+        if !loggedInUser.socialOnly
+            hr
+            a(href="change-password") Change Password &rarr;
