--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,4 +1,9 @@
 extends ../base
+include ../mixins/video
+
 
 block content 
-    h1 hellow
+    each video in user.videos 
+        +video(video) 
+    else 
+       li Sorry nothing found 🤥.    
