--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,8 +2,9 @@ extends base
 include mixins/video
 
 block content   
-   each video in videos 
+   div.video-grid
+      each video in videos 
         +video(video)
-   else 
-      li Sorry Nothing Found 🫠  
+      else 
+         span.empty__message No Video Found 🫠
    
