--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -8,21 +8,20 @@
 @import "./components/video.scss";
 @import "./components/shared.scss";
 @import "./components/forms.scss";
-
-
-
+@import "./components/social-login.scss"; 
 // Screens
 @import "./screens/search.scss";
 //Defaults
 a {
   color: inherit;
-  text-decoration:  none;
+  text-decoration: none;
 }
 
 body {
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   background-color:  $bg;
-   color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: $bg;
+  color: white;
 }
 
 main {
