--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -4,6 +4,6 @@ mixin video(video)
         div.video-mixin-data
              span.video-mixin__title=video.title
              div.video-mixin__meta
-                 span #{video.owner.name} • 
-                 span #{video.meta.view} 회
+               //-   span #{video.owner.name} • 
+               //-   span #{video.meta.view} 회
      
