--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -28,8 +28,8 @@ header {
     border-radius: 5px;
   }
   .header__avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    width: 40px !important;
+    height: 40px !important;
+    border-radius: 50% !important;
   }
 }
