--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -13,16 +13,16 @@ header
                     a(href="/users/edit") Edit Profile
                 li 
                     a(href="/users/logout") Log out 
-                //- li  
-                //-     a(href=`users/${loggedInUser._id}`)
-                //-         if loggedInUser.avatarUrl === ""
-                //-             span 😀
-                //-         else  
-                //-             if loggenInUser.avatarUrl 
-                //-                 if loggedInUser.avatarUrl.includes("github")
-                //-                     img.header__avatar(src=loggedInUser.avatarUrl)
-                //-                 else 
-                //-                     img.header__avatar(src=loggedInUser.avatarUrl)              
+                li  
+                    a(href=`/users/${loggedInUser._id}`)
+                        if loggedInUser.avatarUrl === ""
+                            span 😀
+                        else  
+                            if loggedInUser.avatarUrl 
+                                if loggedInUser.avatarUrl.includes("github")
+                                    img.header__avatar(src=loggedInUser.avatarUrl)
+                                else 
+                                    img.header__avatar(src=loggedInUser.avatarUrl)              
             else 
                 li  
                     a(href="/login") Login
