--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,10 +1,9 @@
 extends ../base
 include ../mixins/video
 
-
 block content 
     div.profile__data
-        img(src="/" + user.avatarUrl).avatar
+        img(src="/" + user.avatarUrl width="100", height="100").avatar_profile
         h3=user.name
     div.video-grid
         each video in user.videos 
